--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <a-scene cursor="rayOrigin: mouse; fuse: true; fuseTimeout: 0;" raycaster="objects: [gps-entity-place];" vr-mode-ui="enabled: false" embedded="" arjs="sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;">
 
-        <a-camera gps-camera="" rotation-reader="">
+        <a-camera gps-camera="simulateLatitude: 43.6549; simulateLongitude: -79.3835;" rotation-reader="">
 		</a-camera>
 	</a-scene>
 </body></html>
