--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>AR Map for IQVIA COVID-19 Healthcare API</title>
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
@@ -15,11 +16,12 @@
     left: 0%;
     display: flex;
     justify-content: center;
-    color: BLACK;
+    color: #1b427d;
     font-size: 24px;
-    background-color: #eee;
+    background-color: #c6e2ff;
         width: 100%;
         padding:10px;
+            font-family: monospace;
     </style>
     <script>
    AFRAME.registerComponent('clickhandler', {
@@ -80,7 +82,7 @@
 
          
         raycaster="objects: [gps-entity-place];"
-        vr-mode-ui="enabled: false"
+        vr-mode-ui="enabled: true"
 		embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: true;"
@@ -106,8 +108,11 @@
                     ></a-image>
                     <a-text color="red" value="Hello, World!" look-at="[gps-camera]"
                         scale="1 1 1" gps-entity-place="latitude: 43.6549; longitude: -79.3835;"></a-text> -->
+              
             <a-camera gps-camera="simulateLatitude: 43.654562; simulateLongitude: -79.383256;" rotation-reader>
               <a-cursor material="color: blue; shader: flat"></a-cursor>
+                <!-- <a-text color="red" value="Hello, World!" look-at="[gps-camera]"
+                        scale="15 15" gps-entity-place="latitude: 43.654871; longitude: -79.383377;"></a-text>-->
             </a-camera>
         </a-scene>
 
